--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "homepage": "https://github.com/dU4E/du4e-express-server#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "ethereumjs-util": "^6.1.0",
     "ethereumjs-wallet": "^0.6.3",
-    "ethers": "^4.0.27",
+    "ethers": "^4.0.48",
     "express": "^4.17.0",
     "web3": "^1.0.0-beta.55"
   }
